k8s/overlays/prod/route-blog-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ac-portal-blog
spec:
  host: blog.appcarrier.cloud
