k8s/overlays/prod/route-cms-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ac-portal-cms
spec:
  host: cms.appcarrier.cloud
