k8s/overlays/prod/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ac-portal
spec:
  host: ac-portal.apps.cluster.com
